kotlin-parser/src/test/semlang/validatorTests/fail/structs3.sem
// Double definition of same member name, same type

struct Foo {
  a: Integer
  a: Integer
}
